# resilience-architect-mcp

./: .gitignore  NOTICE  README.md  pyproject.toml
aws_fis_mcp_server/: consts.py  models.py  server.py
aws_fis_mcp_server/tools/: __init__.py  experiment_template_tools.py  fis_service_tools.py  resource_discovery_tools.py
resilience_architect_mcp/: __init__.py  server.py
resilience_architect_mcp/resources/: experiment_template_resource.py
resilience_architect_mcp/tools/: experiment_template_tools.py  fis_service_tools.py  resource_discovery_tools.py
tests/: __init__.py  conftest.py  test_cli_main.py  test_consts.py  test_init_aws_clients.py  test_models.py  test_server.py  test_write_protection.py
